IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
8/5/14: Allowed File-Extract in 3dmod to be run on non-MRC files (In 4.7).

8/3/14: IMOD_4-8-10
8/3/14: Subdivided steps in Batchruntomo so CTF plotting and 3D gold
finding could be checked at one stopping point; eliminated option to switch
order of steps; CHANGED NUMBERS FOR -start AND -end AGAIN.

7/31/14: Fixed clip corr giving non-zero exit status on Windows.

7/30/14: IMOD_4-7-7
7/30/14: SWITCHED WRITING OF BYTE FILES BACK TO UNSIGNED (In 4.7).

7/24/14: Fixed transferfid for bidirectional series and other cases with
a separate view group option in tracka.com (In 4.7).

7/21/14: Modified uitest to work with the new way IMOD is solving for angles.
(Bug# 1805)

7/21/14: In eTomo - Fine Alignment, changed the title of the MaximumCycles
parameter to "Iteration limit" (In 4.7).(Bug# 1807)

7/21/14: In eTomo fixed a bug that made ineditable table fields editable.
This bug can lead to problems with dataset stablility if these fields are
modified (In 4.7).(Bug# 1812)

7/14/14: IMOD_4-8-9
7/16/14: Changes for Batchruntomo: make it rerun align without local
alignments if it fails with it; add ability to detect blank views at ends of
series; allow pre-existing defocus file to be used; make -start option apply
to all sets being run, not just the first; add start point for CTF correction
separate from plotting; add option to do gold erasing before CTF correction;
add option to use existing alignment.  NUMBERS FOR -start OPTION HAVE
CHANGED.

7/15/14: Tiltalign issues warning instead of error if WeightWholeTracks is
entered for non-patch track model (In 4.7).

7/12/14: Added Object menu item to fill in Z in all contours.

7/11/14: Fixed inability to use patch tracking if cumulative correlation was
checked in coarse alignment (In 4.7).

7/6/14: Made Batchruntomo convert a directive for chopping up patch tracking